<resources>
    <string name="app_name" translatable="false">Universal Character Sheet</string>
    <string name="char_select_icon_desc">Icon of character selection</string>

    <!-- default strings -->
    <string name="default_race">Human</string>

    <!-- All dialog's strings -->
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>

    <!--Adding Chars Activity's strings -->
    <string name="char_add_activity_name">Character Name:</string>
    <string name="char_add_activity_name_hint" translatable="false">Arthur</string>
    <string name="char_add_activity_className">Class name:</string>
    <string name="char_add_activity_className_hint" translatable="false">Knight</string>
    <string name="char_add_activity_raceName">Race:</string>
    <string name="char_add_activity_raceName_hint" translatable="false">Human</string>
    <string name="char_add_activity_preset" translatable="false">Preset:</string>

    <!-- PresetList's strings -->
    <string name="preset_name">Preset name:</string>
    <string name="preset_hint_name" translatable="false">Preset 1</string>

    <!-- DeleteDialog's strings -->
    <string name="delete_ask_1part">Would you like to \ </string>
    <string name="delete_ask_2part">delete?</string>

    <!-- Equipment's strings -->
    <string name="eq_head">Head</string>
    <string name="eq_rightArm">Right arm</string>
    <string name="eq_leftArm">Left arm</string>
    <string name="eq_chest">Chest</string>
    <string name="eq_feet">Feet</string>
    <string name="eq_currency_hint" translatable="false">0</string>
    <string name="eq_name_dialog">Name: </string>
    <string name="eq_name_hint_dialog" translatable="false">Wizard\'s hat</string>
    <string name="eq_value_dialog">Value: </string>
    <string name="eq_no_item_name">No item name</string>
    <string name="eq_type_none">None</string>
    <string name="eq_no_additional_effects">No additional effects</string>
    <string name="eq_value">Value</string>
    <string name="eq_armor">Armor</string>
    <string name="eq_type">Type</string>
    <string name="eq_additional_effects">Additional Effects</string>


    <string name="eq_slot_description_head" translatable="false">Equipment slot - Head</string>
    <string name="eq_slot_description_neck" translatable="false">Equipment slot - Neck</string>
    <string name="eq_slot_description_chest" translatable="false">Equipment slot - Chest</string>
    <string name="eq_slot_description_right_arm" translatable="false">Equipment slot - Right Arm</string>
    <string name="eq_slot_description_left_arm" translatable="false">Equipment slot - Left Arm</string>
    <string name="eq_slot_description_legs" translatable="false">Equipment slot - Legs</string>
    <string name="eq_slot_description_feet" translatable="false">Equipment slot - Feet</string>
    <string name="eq_slot_description_weapon" translatable="false">Equipment slot - Weapon</string>
    <string name="eq_slot_description_off_hand" translatable="false">Equipment slot - Off Hand</string>
    <string name="eq_slot_description_ears" translatable="false">Equipment slot - Ears</string>
    <string name="eq_slot_description_finger" translatable="false">Equipment slot - Finger</string>

    <!-- Equipment dialog -->
    <string name="enter_description">Enter description</string>
    <string name="enter_value">Enter value</string>
    <string name="additional_effects">Additional Effects</string>
    <string name="type">Type:</string>

    <!-- Item's strings -->
    <string name="item_name">Item name</string>
    <string name="item_quantity_example" translatable="false">1.0</string>
    <string name="item_name_dialog">Name: </string>
    <string name="item_quantity_dialog">Quantity: </string>

    <!-- Spell's strings -->
    <string name="spell_name">Name:</string>
    <string name="spell_cost">Cost:</string>
    <string name="spell_damage">Damage:</string>
    <string name="spell_description">Description:</string>
    <string name="spell_name_hint_dialog">Ability/Spell name</string>
    <string name="spell_cost_hint_dialog">Cost</string>
    <string name="spell_damage_hint_dialog">Damage</string>
    <string name="spell_description_hint_dialog">Description</string>

    <!-- Stat's strings -->
    <string name="stat_name">Name</string>
    <string name="stat_name_dialog">Name:</string>
    <string name="stat_name_hint_dialog">Intellect</string>
    <string name="stat_value_dialog">Value:</string>
    <string name="stat_value_hint_dialog" translatable="false">5</string>
    <string name="rename_tab_info_dialog">Enter new tab name. Change is global for all characters. You can always rename it later.</string>
    <string name="rename_tab_hint_dialog" translatable="false">Statistics</string>

    <!-- Blade's presets -->
    <string name="strength">Strength</string>
    <string name="agility">Agility</string>
    <string name="endurance">Endurance</string>
    <string name="intuition">Intuition</string>
    <string name="will">Will</string>
    <string name="wisdom">Wisdom</string>
    <string name="charisma">Charisma</string>
    <string name="reflex">Reflex</string>
    <string name="encumbrance">Encumbrance</string>
    <string name="toughness">Toughness</string>
    <string name="speed">Speed</string>
    <string name="reaction">Reaction</string>
    <string name="potential">Potential</string>
    <string name="ether">Ether</string>

    <!-- Actions's strings -->
    <string name="action_delete">delete</string>
    <string name="add_to_presets">Add to presets</string>
    <string name="change_tab_name">Change current tab name</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="create_new_tab">Create new tab</string>
    <string name="remove_tab">Remove tab</string>

    <!-- Array's strings -->
    <string name="none">None</string>
    <string name="blade">Blade</string>

    <!-- Spells fragment -->
    <string name="damage">Damage</string>
    <string name="additional_effect">Additional effect</string>
    <string name="cost">Cost</string>
    <string name="additional_cost">Additional Cost</string>
    <string name="special_notes">Special notes</string>
    <string name="click_me_to_set_description">Click me to set description.</string>
    <string name="no_add_effect">No additional effect</string>
    <string name="no_add_cost">No additional cost</string>
    <string name="no_special_notes">No special notes.</string>
    <string name="enter_special_notes">Enter special notes</string>
    <string name="ability_editor">Ability editor</string>
    <string name="enter_additional_effect">Enter additional effect parameters/description</string>
    <string name="enter_additional_cost">Enter additional cost parameters/description</string>

    <!-- About activity -->
    <string name="credits_desc">Icons made by Skoll, Delapouite, Lorc from https://game-icons.net.</string>
    <string name="credits">Credits</string>
    <string name="about_desc">This app is mentioned to be (sort of) universal character sheet. There is a lot of systems so it is not that easy to satisfy every single one. Although I am working on
    improvements and new features. Keep in mind that I am working on it in my free time, so updates my not occur as often as I would like to.
        If you have any cool idea on how to improve it or there is something you would like to see in the app - feel free to share it with me via e-mail (awkwardly.developed.apps@gmail.com) \n \n
    I would like to thank you for downloading my app! If you like it - please rate it on the Google Play Store.</string>

    <!-- Consent -->
    <string name="reset_consent">Reset consent</string>

    <!-- Bottom Navigation Menu-->
    <string name="bottom_nav_stats">Stats</string>
    <string name="bottom_nav_inventory">Inventory</string>
    <string name="bottom_nav_abilities">Abilities</string>
    <string name="bottom_nav_notes">Notes</string>
    <string name="note_creation">Note Creation</string>
    <string name="title">Title:</string>
    <string name="note">Note:</string>
    <string name="sort">Sort</string>
    <string name="name_ascending">Name ascending</string>
    <string name="name_descending">Name descending</string>
    <string name="value_ascending">Value ascending</string>
    <string name="value_descending">Value descending</string>


</resources>
