<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- "Mark Favorite", should appear as action button if possible -->

    <item
        android:id="@+id/action_sortOrder"
        android:title="@string/sort"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_sort_nameAsc"
                android:title="@string/name_ascending"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_sort_nameDesc"
                android:title="@string/name_descending"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_sort_valueAsc"
                android:title="@string/value_ascending"
                android:visible="false"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_sort_valueDesc"
                android:title="@string/value_descending"
                android:visible="false"
                app:showAsAction="never" />
        </menu>
    </item>

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>