<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/item_name_dialog"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/item_name_dialog"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/item_name_dialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/item_name"
        android:inputType="textCapSentences"
        android:maxLength="20"
        app:layout_constraintEnd_toEndOf="@+id/item_quantity_dialog"
        app:layout_constraintStart_toStartOf="@+id/item_quantity_dialog"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/item_quantity_dialog"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/item_quantity_dialog"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/item_quantity_dialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/item_quantity_example"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/item_name_dialog" />


</androidx.constraintlayout.widget.ConstraintLayout>